--- a/QQZone/Base.lproj/Main.storyboard
+++ b/QQZone/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="CDH_LoginController" customModule="QQZone" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,146 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login_default_avatar" translatesAutoresizingMaskIntoConstraints="NO" id="aX9-bB-ZGp">
+                                <rect key="frame" x="219" y="50" width="162" height="162"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="162" id="2S0-Fn-UcV"/>
+                                    <constraint firstAttribute="height" constant="162" id="geN-mK-umu"/>
+                                </constraints>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tAx-mD-LPb">
+                                <rect key="frame" x="125" y="242" width="350" height="200"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login_input_bg" translatesAutoresizingMaskIntoConstraints="NO" id="MPP-nr-VUS">
+                                        <rect key="frame" x="0.0" y="0.0" width="350" height="100"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="100" id="DSm-s3-92b"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="账号" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EO8-6W-WRH">
+                                        <rect key="frame" x="20" y="10" width="34" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jhn-hb-yZJ">
+                                        <rect key="frame" x="20" y="66" width="34" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="123" placeholder="123" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ot7-ya-jVq">
+                                        <rect key="frame" x="84" y="0.0" width="266" height="44"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="TYr-Tk-gCZ"/>
+                                        </constraints>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="123" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="77X-wa-lmc">
+                                        <rect key="frame" x="84" y="55" width="266" height="44"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="KKm-rt-6Nm"/>
+                                        </constraints>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qix-Ur-snZ">
+                                        <rect key="frame" x="0.0" y="110" width="350" height="44"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="8IM-4g-7Hp"/>
+                                        </constraints>
+                                        <state key="normal" title="登入" backgroundImage="login_button_normal"/>
+                                        <state key="highlighted" backgroundImage="login_button_pressed"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ba4-8D-Zpz">
+                                        <rect key="frame" x="175" y="164" width="175" height="27"/>
+                                        <rect key="contentStretch" x="1" y="0.0" width="1" height="1"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <inset key="titleEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="5" maxY="0.0"/>
+                                        <state key="normal" title="自动登入" image="login_checkbox_normal"/>
+                                        <state key="selected" image="login_checkbox_checked"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Dt-yq-fa8">
+                                        <rect key="frame" x="0.0" y="164" width="175" height="27"/>
+                                        <rect key="contentStretch" x="1" y="0.0" width="1" height="1"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="27" id="THy-S0-Ch6"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <inset key="titleEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="5" maxY="0.0"/>
+                                        <state key="normal" title="记住密码" image="login_checkbox_normal"/>
+                                        <state key="selected" image="login_checkbox_checked"/>
+                                    </button>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="kbZ-UH-V5b">
+                                        <rect key="frame" x="199" y="122" width="20" height="20"/>
+                                    </activityIndicatorView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="ot7-ya-jVq" firstAttribute="leading" secondItem="EO8-6W-WRH" secondAttribute="trailing" constant="30" id="4Sv-eo-aBu"/>
+                                    <constraint firstItem="EO8-6W-WRH" firstAttribute="leading" secondItem="tAx-mD-LPb" secondAttribute="leading" constant="20" id="77E-bj-gVt"/>
+                                    <constraint firstItem="77X-wa-lmc" firstAttribute="leading" secondItem="Jhn-hb-yZJ" secondAttribute="trailing" constant="30" id="9xg-yc-Vac"/>
+                                    <constraint firstItem="6Dt-yq-fa8" firstAttribute="width" secondItem="tAx-mD-LPb" secondAttribute="width" multiplier="0.5" id="DYA-Mc-V98"/>
+                                    <constraint firstItem="Ba4-8D-Zpz" firstAttribute="leading" secondItem="6Dt-yq-fa8" secondAttribute="trailing" id="Efl-mY-HA7"/>
+                                    <constraint firstItem="Jhn-hb-yZJ" firstAttribute="leading" secondItem="EO8-6W-WRH" secondAttribute="leading" id="HVA-3p-Fss"/>
+                                    <constraint firstItem="6Dt-yq-fa8" firstAttribute="top" secondItem="qix-Ur-snZ" secondAttribute="bottom" constant="10" id="LOW-VQ-AjQ"/>
+                                    <constraint firstItem="77X-wa-lmc" firstAttribute="top" secondItem="ot7-ya-jVq" secondAttribute="bottom" constant="10" id="P63-QX-7AD"/>
+                                    <constraint firstItem="qix-Ur-snZ" firstAttribute="leading" secondItem="tAx-mD-LPb" secondAttribute="leading" id="QgM-te-efx"/>
+                                    <constraint firstAttribute="trailing" secondItem="77X-wa-lmc" secondAttribute="trailing" id="R3h-WR-8T4"/>
+                                    <constraint firstItem="6Dt-yq-fa8" firstAttribute="leading" secondItem="tAx-mD-LPb" secondAttribute="leading" id="Vqd-bv-rf9"/>
+                                    <constraint firstItem="ot7-ya-jVq" firstAttribute="top" secondItem="tAx-mD-LPb" secondAttribute="top" id="WZG-HL-9Pk"/>
+                                    <constraint firstItem="Ba4-8D-Zpz" firstAttribute="height" secondItem="6Dt-yq-fa8" secondAttribute="height" id="XUU-mK-0MB"/>
+                                    <constraint firstItem="Ba4-8D-Zpz" firstAttribute="top" secondItem="6Dt-yq-fa8" secondAttribute="top" id="Xoa-IC-wCE"/>
+                                    <constraint firstAttribute="trailing" secondItem="qix-Ur-snZ" secondAttribute="trailing" id="cCc-cE-gCw"/>
+                                    <constraint firstItem="EO8-6W-WRH" firstAttribute="top" secondItem="tAx-mD-LPb" secondAttribute="top" constant="10" id="dpy-iI-OAA"/>
+                                    <constraint firstItem="Jhn-hb-yZJ" firstAttribute="top" secondItem="EO8-6W-WRH" secondAttribute="bottom" constant="35" id="gx5-Zy-QT9"/>
+                                    <constraint firstItem="MPP-nr-VUS" firstAttribute="leading" secondItem="tAx-mD-LPb" secondAttribute="leading" id="hAu-9D-8Zc"/>
+                                    <constraint firstAttribute="trailing" secondItem="ot7-ya-jVq" secondAttribute="trailing" id="i2v-UV-7Qy"/>
+                                    <constraint firstItem="qix-Ur-snZ" firstAttribute="top" secondItem="MPP-nr-VUS" secondAttribute="bottom" constant="10" id="l2p-gD-Aq9"/>
+                                    <constraint firstAttribute="height" constant="200" id="mad-fl-xij"/>
+                                    <constraint firstAttribute="width" constant="350" id="nIp-em-TEy"/>
+                                    <constraint firstAttribute="trailing" secondItem="MPP-nr-VUS" secondAttribute="trailing" id="ouj-lg-rXt"/>
+                                    <constraint firstItem="MPP-nr-VUS" firstAttribute="top" secondItem="tAx-mD-LPb" secondAttribute="top" id="tzl-Gp-QeD"/>
+                                    <constraint firstAttribute="trailing" secondItem="Ba4-8D-Zpz" secondAttribute="trailing" id="vrm-ZL-x9n"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.2156862745" green="0.2156862745" blue="0.2156862745" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="aX9-bB-ZGp" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="5bz-Ve-5xT"/>
+                            <constraint firstItem="aX9-bB-ZGp" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="30" id="BL1-uN-N5b"/>
+                            <constraint firstItem="tAx-mD-LPb" firstAttribute="centerX" secondItem="aX9-bB-ZGp" secondAttribute="centerX" id="mZB-pZ-k3I"/>
+                            <constraint firstItem="tAx-mD-LPb" firstAttribute="top" secondItem="aX9-bB-ZGp" secondAttribute="bottom" constant="30" id="mcq-pm-MXE"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="accountTextField" destination="ot7-ya-jVq" id="uBS-I4-lla"/>
+                        <outlet property="activityView" destination="kbZ-UH-V5b" id="sJW-pv-uba"/>
+                        <outlet property="autoLoginButton" destination="Ba4-8D-Zpz" id="ME6-jy-AJZ"/>
+                        <outlet property="loginView" destination="tAx-mD-LPb" id="tlo-Od-nSn"/>
+                        <outlet property="passwordTextField" destination="77X-wa-lmc" id="eiZ-sJ-sXo"/>
+                        <outlet property="remPasswordButton" destination="6Dt-yq-fa8" id="yOV-Nx-rZK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="378" y="165"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="login_button_normal" width="20" height="11"/>
+        <image name="login_button_pressed" width="20" height="11"/>
+        <image name="login_checkbox_checked" width="20" height="20"/>
+        <image name="login_checkbox_normal" width="20" height="20"/>
+        <image name="login_default_avatar" width="126" height="126"/>
+        <image name="login_input_bg" width="18" height="70"/>
+    </resources>
 </document>
